Fixes styling issues in devtools on safari.

--- a/interface/popup/style.css
+++ b/interface/popup/style.css
@@ -246,6 +246,8 @@ button:focus {outline:0;}
     padding: 4px;
     font-family: "Segoe UI", Tahoma, sans-serif;
     border: 1px solid rgb(150,150,150);
+    background-color: #FFFFFF;
+    color: #000000;
 }
 
 #cookie-container textarea:hover, #cookie-container input:not([disabled])[type="text"]:hover {
